[UPDATE] - adding new grid for services

--- a/static/services/css/style.css
+++ b/static/services/css/style.css
@@ -1,85 +1,7 @@
-.masthead .grupoC {
-    width: 100%;
-    padding: 0px 20px;
+.card {
+  margin-bottom: 20px;
 }
 
-.style {
-  background-color: blue;
-  margin: 10px;
+.space {
+  width: 5.5rem;
 }
-
-.img-fluid {
-  background-size: 100%;
-}
-
-.masthead .cartao {
-  background-color:  indigo;
-    border-radius: 20px;
-}
-
-.masthead .card:hover {    
-    box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-    transform: translateY(-3px) scale(1.1);
-}
-
-
-.masthead .card-img-top {
-  border-radius: 20px 20px 0px 0px;
-}
-
-.masthead .card-body {   
-    border-radius: 0px 0px 20px 20px;
-}
-
-.masthead .card-deck .card .card-body h5 {
-  color: black;
-}
-
-.masthead .card-deck .card .card-body p {
-  text-align: justify;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-}
-
-#wearefoda .card {
-  box-shadow: 3px 3px 3px rgba(54, 54, 54, 1);;
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-  transition: all 500ms;
-}
-
-#wearefoda .card:hover {
-  box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-  transform: translateY(-3px) scale(1.1);
-}
-
-#wearefoda .card-deck {
-  width: 100%;
-  padding: 10px 8%;
-}
-
-#wearefoda img {
-  padding: 010px;
-  border-radius: 20px;
-}
-
-.gol {
-  height: 55px;
-  border-radius: 20px 20px;
-  background-color: yellow;
-}
-
-
-#wearefoda .card-deck .statusDev {
-  padding-left: 20px;
-  height: 1.5rem;
-  padding-top: 3%;
-  text-align: left;
-  font-family: sans-serif;
-  font-weight: 1000;
-}
-
