--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@
 }
 
 header.masthead {
-    background-image: url('/img/space_otimized.gif');
+    /* background-image: url('/img/space_otimized.gif'); */
     padding-top: 7.5rem;
     padding-bottom: 5rem;
 }
@@ -202,7 +202,7 @@ div.navbar-collapse.collapse.show{
 /*MOBILE SCREEN*/
 @media only screen and (max-device-width: 770px) {
     header.masthead {
-        background-image: url('/img/space_otimized.gif');
+        /* background-image: url('/img/space_otimized.gif'); */
         padding-top: 8rem;
     }
     p.text-faded{
